@@ -5,8 +5,13 @@
 ICON_BOCHS ICON build\win32\nsis\logo.ico
 1 ICON build\win32\nsis\bochs.ico
 
-// Manifest for WinXP & Win2003
-1 24 build\win32\bochs.manifest
+#ifndef _WIN64
+// Manifest for 32-bit Windows
+1 24 build\win32\bochs.win32.manifest
+#else
+// Manifest for 64-bit Windows
+1 24 build\win32\bochs.win64.manifest
+#endif
 
 ASK_DLG DIALOG 30, 30, 200, 100
 STYLE DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
